--- a/fossils.html
+++ b/fossils.html
@@ -22,11 +22,11 @@
     <div class="container pt-5">
       <div class="h1 py-4 text-center">Fossils</div>
       <div class="table-responsive">
-        <table class="table table-hover table-sm table-md-responsive" style="min-width: 600px;">
+        <table class="table table-hover table-md-responsive" style="min-width: 600px;">
           <tbody>
             <tr class="bg-light">
-              <td>
-                <input type="fossilsearch" class="form-control" ng-model="fossilname" placeholder="Search..." />
+              <td colspan="2">
+                <input type="search" class="form-control" ng-model="fossilname" placeholder="Search..." />
               </td>
               <td>
                 <select name="fossilgroup" id="fossilgroup" class="form-control" ng-model="fossilgroup">
@@ -35,54 +35,54 @@
                 </select>
               </td>
               <td></td>
+              <td></td>
             </tr>
           </tbody>
           <thead>
             <tr>
-              <th>
-                <a href="#" ng-click="orderByField='displayname'; reverseSort = !reverseSort" class="text-nowrap"
+              <th colspan="2">
+                <a href="#" ng-click="orderByField='name'; reverseSort = !reverseSort" class="text-nowrap"
                   >Fossil
-                  <span ng-show="orderByField == 'displayname'">
+                  <span ng-show="orderByField == 'name'">
                     <span ng-show="!reverseSort"><i class="fas fa-caret-down fa-lg"></i></span>
                     <span ng-show="reverseSort"><i class="fas fa-caret-up fa-lg"></i></span>
                   </span>
                 </a>
               </th>
               <th>
-                <a href="#" ng-click="orderByField='part-of'; reverseSort = !reverseSort" class="text-nowrap"
+                <a href="#" ng-click="orderByField='fossil_group'; reverseSort = !reverseSort" class="text-nowrap"
                   >Part of
-                  <span ng-show="orderByField == 'part-of'">
+                  <span ng-show="orderByField == 'fossil_group'">
                     <span ng-show="!reverseSort"><i class="fas fa-caret-down fa-lg"></i></span>
                     <span ng-show="reverseSort"><i class="fas fa-caret-up fa-lg"></i></span>
                   </span>
                 </a>
               </th>
               <th>
-                <a href="#" ng-click="orderByField='price'; reverseSort = !reverseSort" class="text-nowrap"
+                <a href="#" ng-click="orderByField='sell'; reverseSort = !reverseSort" class="text-nowrap"
                   >Price
-                  <span ng-show="orderByField == 'price'">
+                  <span ng-show="orderByField == 'sell'">
                     <span ng-show="!reverseSort"><i class="fas fa-caret-down fa-lg"></i></span>
                     <span ng-show="reverseSort"><i class="fas fa-caret-up fa-lg"></i></span>
                   </span>
                 </a>
               </th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
             <tr ng-if="!fossilsloaded">
               <td colspan="3" class="py-4 h5 mb-0 font-weight-light"><i class="fas fa-spinner fa-pulse"></i> Getting fossil data...</td>
             </tr>
-            <tr ng-if="fossilsloaded" ng-repeat="(key, value) in results = (fossils | toArray | search:'':fossilname | trait:'part-of':fossilgroup | orderBy:orderByField:reverseSort)">
-              <td class="align-middle">
-                <div class="d-flex justify-content-start align-items-center">
-                  <div>
-                    <img ng-src="{{value.image_uri}}" style="height: 45px; width: 45px;" alt="" />
-                  </div>
-                  <div class="ml-2 text-capitalize">{{ value.displayname }}</div>
-                </div>
+            <tr ng-if="fossilsloaded" ng-repeat="(key, value) in results = (fossils | toArray | search:'':fossilname | trait:'fossil_group':fossilgroup | orderBy:orderByField:reverseSort)">
+              <td class="align-middle"><img ng-src="{{value.image_url}}" style="width: 35px;" alt="" /></td>
+              <td class="align-middle text-nowrap text-capitalize">{{ value.name }}</td>
+              <td class="align-middle text-nowrap">
+                <div ng-if="value['fossil_group']">{{ value['fossil_group'] }}</div>
+                <div ng-if="!value['fossil_group']">n/a</div>
               </td>
-              <td class="align-middle text-nowrap">{{ value['part-of'] }}</td>
-              <td class="align-middle text-nowrap">{{ value.price | currency:'':0 }}</td>
+              <td class="align-middle text-nowrap">{{ value.sell }}</td>
+              <td class="align-middle text-nowrap"><a ng-href="{{value.url}}" class="btn btn-sm btn-outline-primary" target="_blank">details...</a></td>
             </tr>
             <tr ng-if="results.length > 0 && fossilsloaded">
               <td colspan="3" class="py-3">{{ results.length }} fossil<span ng-if="results.length>1">s</span> found</td>
@@ -96,39 +96,6 @@
           </tbody>
         </table>
       </div>
-
-      <!-- <div class="row">
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4" ng-repeat="(key, value) in results = (fossils | toArray | orderBy:'displayname' | filter:{gender:gender})">
-          <div class="card">
-            <img ng-src="{{value.image_uri}}" alt="fossil - {{value.displayname}}" class="card-img-top" />
-            <div class="card-body">
-              <div class="h3 font-weight-bold text-center">{{ value.displayname }}</div>
-              <table class="table table-sm table-borderless">
-                <tr>
-                  <td class="text-right">Birthday</td>
-                  <td>{{ value['birthday-string'] }}</td>
-                </tr>
-                <tr>
-                  <td class="text-right">Gender</td>
-                  <td>{{ value['gender'] }}</td>
-                </tr>
-                <tr>
-                  <td class="text-right">Hobby</td>
-                  <td>{{ value['hobby'] }}</td>
-                </tr>
-                <tr>
-                  <td class="text-right">Personality</td>
-                  <td>{{ value['personality'] }}</td>
-                </tr>
-                <tr>
-                  <td class="text-right">Species</td>
-                  <td>{{ value['species'] }}</td>
-                </tr>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </div>
   </body>
 </html>
