--- a/checklist.html
+++ b/checklist.html
@@ -20,6 +20,9 @@
     <div ng-include="'./banner.html'"></div>
 
     <div class="container pt-5">
+
+      <div class="alert alert-danger my-4"><i class="fa fa-info-circle fa-lg mr-2"></i>This page is still a work in progress.  Sorry!</div>
+
       <div class="d-flex justify-content-between align-items-center flex-wrap py-5">
         <div class="h1 flex-fill">Critter Checklist</div>
         <div class="flex-fill">
@@ -43,9 +46,9 @@
                     <label for="{{value['file-name']}}" class="w-100 p-1 p-md-3">
                       <div class="text-center">
                         <div>
-                          <img ng-src="{{value.icon_uri}}" style="height: 40px; width: 40px" alt="" />
+                          <img ng-src="{{value.image_url}}" style="height: 40px; width: 40px" alt="" />
                         </div>
-                        <div class="small text-capitalize">{{ value.displayname }}</div>
+                        <div class="small text-capitalize">{{ value.name }}</div>
                       </div>
                     </label>
                   </div>
