--- a/flowers.html
+++ b/flowers.html
@@ -19,8 +19,10 @@
   <body ng-cloak>
     <div ng-include="'./banner.html'"></div>
     <div class="container py-5">
-      <div class="h1 py-4 text-center">Flowers</div>
 
+      <div class="alert alert-danger mt-5 mb-3"><i class="fa fa-info-circle fa-lg mr-2"></i>This page is still a work in progress.  Sorry!</div>
+
+      <div class="h1 py-4 text-center">Flowers</div>
       <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
           <a class="nav-link active" id="pills-windflower-tab" data-toggle="pill" href="#pills-windflower" role="tab" aria-controls="pills-windflower" aria-selected="true">Windflowers</a>
